# DataScience_and_ML_Assignment

./: Assignment_01_2130238.ipynb  Assignment_02_2130238.ipynb  pyproject.toml  task_1.ipynb  task_2.ipynb
00_Pre-processing/: data_pre-processing.html  data_pre-processing.ipynb
01_Classification/: Assignment_01_2130238 (1).ipynb  Assignment_01_2130238.html  Assignment_01_2130238.ipynb  Assignment_02_2130238.html  Assignment_02_2130238.ipynb  Assignment_03_2130238.html  Assignment_03_2130238.ipynb  Assignment_04_2130238.html  Assignment_04_2130238.ipynb
02_regression/: Assignment_02_2130238.html  Assignment_02_2130238.ipynb  Assignment_02_task7_2130238.ipynb  Assignment_02_task8_2130238.ipynb  Assignment_02_task_2_2130238.ipynb  task2_multiple_regression.ipynb  task3_to_4_polynomial_regression.ipynb  task5_Ridge_regression.ipynb  task6_regression_tree.ipynb  task7_model_comparison.ipynb
03_Clustering/: Assignment_03_2130238.html  Assignment_03_2130238.ipynb
classification/: task_1.ipynb  task_2.ipynb  task_3.ipynb
data/: dataset.csv  dataset_cleaned.csv
models/: clf_tree_GS.pkl  lin_reg_poly_2.pkl
regression/: task1_multiple_regression.ipynb  task2_polynomial_regression.ipynb
