[project]
name = "hausarbeit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "imblearn>=0.0",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]
